@@ -1,7 +1,6 @@
 package de.mephisto.vpin.ui.tables;
 
 import de.mephisto.vpin.commons.utils.WidgetFactory;
-import de.mephisto.vpin.restclient.altcolor.AltColorTypes;
 import de.mephisto.vpin.restclient.emulators.GameEmulatorRepresentation;
 import de.mephisto.vpin.restclient.frontend.EmulatorType;
 import de.mephisto.vpin.restclient.games.GameRepresentation;
@@ -27,7 +26,8 @@ import org.slf4j.LoggerFactory;
 
 import java.lang.invoke.MethodHandles;
 import java.net.URL;
-import java.text.SimpleDateFormat;
+import java.time.format.DateTimeFormatter;
+import java.time.format.FormatStyle;
 import java.util.List;
 import java.util.Optional;
 import java.util.ResourceBundle;
@@ -207,7 +207,7 @@ public class TablesSidebarAltColorController implements Initializable {
       deleteBtn.setDisable(!altColorAvailable);
 
       if (altColorAvailable) {
-        lastModifiedLabel.setText(SimpleDateFormat.getDateTimeInstance().format(altColor.getModificationDate()));
+        lastModifiedLabel.setText(DateTimeFormatter.ofLocalizedDateTime(FormatStyle.MEDIUM).format(altColor.getModificationDate()));
         typeLabel.setText(altColor.getAltColorType().name());
         nameLabel.setText(altColor.getName());
         altColor = client.getAltColorService().getAltColor(game.getId());
@@ -221,7 +221,7 @@ public class TablesSidebarAltColorController implements Initializable {
         List<ValidationState> validationStates = altColor.getValidationStates();
         errorBox.setVisible(!validationStates.isEmpty());
         if (!validationStates.isEmpty()) {
-          validationState = validationStates.get(0);
+          validationState = validationStates.getFirst();
           LocalizedValidation validationResult = GameValidationTexts.getValidationResult(game, validationState);
           errorTitle.setText(validationResult.getLabel());
           errorText.setText(validationResult.getText());
